app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

body {
  width: 100%;
  height: 100vh;
  margin: auto;
  background-image: url('http://images.alphacoders.com/282/282163.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  font-family: cursive;
}
.map {
  position: relative;
  float: left;
  left: 4%;
  margin: 5% auto;
  width: 45%;
  height: 500px;
  background-color: #ffe9b6;
}
div .bench-index {
  position: relative;
  float: right;
  right: 4%;
  margin: 5% auto;
  height: 500px;
  width: 45%;
  font-size: 20px;
  background-color: #ffedc3;
  overflow-y: auto;
}
div header {
  width: 100%;
  margin: auto;
  text-align: center;
  background-color: #fdf6e3;
  font-size: 40px;
}
h1 {
  margin: 0px;
}
li {
  margin: 5px;
  list-style-type: none;
}
div.new-bench {
  text-align: center;
  background-color: #ffedc3;
  width: 50%;
  margin: 3% auto;
  padding: 2%;
}
.new-bench-header {
  font-size: 35px;
}
form.bench {
  margin: auto;
  text-align: center;
}
label {
  text-decoration: underline;
  font-style: italic;
}
form.bench label, input {
  font-size: 18px;
  width: 30%;
  height: 40px;
  text-align: center;
  margin: auto;
}
form.bench input, textarea {
  background-color: transparent;
  border: none;
}
.latlng {
  position: relative;
  left: 1%;
}
#seating {
  height: 25px;
  background-color: transparent;
  font-size: 16px;
}
textarea {
  width: 90%;
  height: 100px;
  font-size: 18px;
  font-family: cursive;
  border-bottom: 1px solid grey;
}
button.create-button {
  font-size: 18px;
  background-color: transparent;
  border: none;
  font-family: cursive;
}
button.create-button:hover {
  font-weight: bold;
  text-decoration: underline;
}

